# atom-engine

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  proposal.md  test.todo.md  todo.md
docs/: index.html  index.md  styles.css
docs/features/: components.md  context.md  stacks.md
docs/filters/: all.md  collection.md  conditional.md  date.md  encoding.md  helpers.md  html.md  number.md  string.md
docs/guide/: getting-started.md
docs/reference/: api.md  functions.md
docs/templates/: syntax.md
examples/: basic.rs  components.rs  comprehensive_test.rs  file_templates.rs  filters.rs  include_example.rs  layouts.rs  loops_conditionals.rs  provide_inject.rs
examples/templates/: about.html  base.html  base_layout.html  include_footer.html  include_header.html  include_sidebar.html  test_conditionals.html  test_context.html  test_filters_collection.html  test_filters_conditional.html  test_filters_number.html  test_filters_string.html  test_full.html  test_includes.html  test_inheritance.html  test_loops.html  test_stacks.html  test_variables.html
src/: components.rs  context.rs  directives.rs  error.rs  filters.rs  lib.rs  pool.rs
src/directives/builtin/: mod.rs
src/filters/: collection.rs  component.rs  conditional.rs  date.rs  encoding.rs  html.rs  mod.rs  number.rs  string.rs  system.rs
src/helpers/: collections.rs  dates.rs  encoding.rs  mod.rs  numbers.rs  strings.rs  types.rs
src/parser/: arg_list.rs  expr_parser.rs  lexer.rs  mod.rs  parser.rs  source_map.rs
src/renderer/: context_chain.rs  expr_eval.rs  helper_eval.rs  mod.rs  output.rs  renderer.rs  scope.rs  section_map.rs  slot_resolver.rs  stack_buffer.rs  transform.rs
src/types/: coerce.rs  mod.rs  props.rs  value.rs
tests/: basic.rs  control.rs  interpolation.rs  loops.rs  templates_test.rs  variables.rs
tests/common/: mod.rs
tests/templates/: base.html  includes.html  test_conditionals.html  test_context.html  test_filters_collection.html  test_filters_conditional.html  test_filters_date.html  test_filters_encoding.html  test_filters_html.html  test_filters_number.html  test_filters_string.html  test_full.html  test_functions.html  test_helpers.html  test_inheritance.html  test_loops.html  test_macros.html  test_stacks.html  test_variables.html
tests/templates/components/: button.html  card.html
