[package]
name = "atom-engine"
version = "5.0.2"
edition = "2021"
rust-version = "1.70"
description = "A component-oriented template engine built on Tera with props, slots, and provide/inject context"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ateeq1999/atom-engine"
homepage = "https://github.com/ateeq1999/atom-engine"
documentation = "https://github.com/ateeq1999/atom-engine#readme"
keywords = ["template", "templating", "tera", "components", "jinja2"]
categories = ["template-engine", "web-programming"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[package.metadata.crates-lint]
warns = []

[dependencies]
# Template engine base
tera = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Data structures
indexmap = { version = "2", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
heck = "0.5"
unicode-segmentation = "1"
regex = "1"

# Encoding
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
urlencoding = "2"
hex = "0.4"

# Random
rand = "0.8"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Fuzzy matching for error suggestions
strsim = "0.11"

rayon = { version = "1", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[features]
default = []
parallel = ["dep:rayon"]
async = ["dep:tokio"]
pool-alloc = []
html = []

[dev-dependencies]
insta = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true